--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,22 @@
 # User Exceptions
 backup/
+bkp-results
+1-diff-gene-exp/goldstandard/
+1-diff-gene-exp/data/fromPaulo
 .Rhistory
 .pybiomart.sqlite
 .DS_Store
 *.xlsx
 
 ## String-DB
-2-core_genes/StringDB/7227/
-2-core_genes/StringDB/9606/
-2-core_genes/StringDB/10090/
-2-core_genes/StringDB/selected/
+StringDB/7227/
+StringDB/9606/
+StringDB/10090/
+StringDB/selected/
 
 ## EggNog
-2-core_genes/eggnog/*.tsv
-2-core_genes/eggnog/*.tsv.gz
+eggnog/*.tsv
+eggnog/*.tsv.gz
 
 
 # Byte-compiled / optimized / DLL files
