--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,31 @@
-# User Exceptions
+## User Exceptions
 backup/
 bkp-results
+.pybiomart.sqlite
+*.jar
+*.graphml
+.Rhistory
+.DS_Store
+*.xlsx
 
-# Folder 01
+## Folder 01
 01-diff-gene-exp/goldstandard/
 01-diff-gene-exp/data
 
-# Folder 02
+## Folder 02
 02-core_genes/images
 
-# Folder 03
+## Folder 03
 03-screened-data/data/
 03-screened-data/images/
 03-screened-data/images-joana/
 03-screened-data/results/
 
-#
+## Folder 04
 04-network/images/
 04-network/gephiloadandplot/debug/
 04-network/results/
 networkbrowser/json/
-*.jar
-*.graphml
-.Rhistory
-.pybiomart.sqlite
-.DS_Store
-*.xlsx
 
 ## String-DB
 data/StringDB/7227/
